# JSForAbleton

./: .gitignore  README.md
design.md/: design.md  design2.md  test_patchers.maxpat
quickjs/: AtomToJSValue.c  AtomToJSValue.h  CMakeLists.txt  JSValueToTAtom.c  JSValueToTAtom.h  Scheduler.c  Scheduler.h  functionSchedule.c  functionSchedule.h  functionScheduler.c  functionScheduler.h  interp.h  js_interp.c  js_interp.h  qjs_interp.c  qjs_interp.h  qjs_struct.h  quickjs.c  test_functionSchedule.c  test_functionSchedule.h
